# google_word2vec_rust_inference_server

./: .gitignore  Cargo.toml
scripts/: json_request.py
src/: main.rs  server.rs  word2vec.old.rs  word2vec.rs
