[package]
name = "word2vec"
version = "0.1.0"
authors = ["jamie <jamieapps101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"


[profile.dev]
opt-level = 3               # Use all optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.test]
opt-level = 3               # Use all optimizations.
overflow-checks = false     # Disable integer overflow checks.