[package]
name = "word2vec"
version = "0.1.0"
authors = ["jamie <jamieapps101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8.0"
threadpool = "1.8.1"
clap = "2.33.3"
ctrlc = "3.1.7"

[profile.dev]
opt-level = 3               # Use all optimizations.
overflow-checks = false     # Disable integer overflow checks.

[profile.test]
opt-level = 3               # Use all optimizations.
overflow-checks = false     # Disable integer overflow checks.